Implement live updates (#125)

--- a/.shellcheckrc
+++ b/.shellcheckrc
@@ -1,2 +1,3 @@
 disable=SC1090 # Can't follow non-constant source. Use a directive to specify location.
 disable=SC2039 # In POSIX sh, something is undefined
+disable=SC3043 # In POSIX sh, 'local' is undefined
