--- a/.travis.yml
+++ b/.travis.yml
@@ -35,12 +35,16 @@ cache:
 
 before_install:
   # https://docs.travis-ci.com/user/languages/ruby/#bundler-20
-  - yes | gem update --system --force
-  - gem install bundler
-  - test "$DOCKER_BUILD" = '1' && docker load -i docker_images/images.tar || true
+  - |
+    if [ "$DOCKER_BUILD" = '1' ] ; then
+      docker load -i docker_images/images.tar || true
+    else
+      yes | gem update --system --force
+      gem install bundler
+    fi
 install:
   - |
-    [ "$DOCKER_BUILD" = '1' ] && docker build --build-arg -f spec/support/docker/Dockerfile -t esearch-rspec . && return
+    [ "$DOCKER_BUILD" = '1' ] && docker build -f spec/support/docker/Dockerfile -t esearch-rspec . && return
 
     if [ ! -z "$INSTALL_PYTHON_VERSION" ]; then
       which pyenv
