--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,7 +43,7 @@ AllCops:
   Exclude:
     - 'spec/support/brew_formula/**/*'
     - 'spec/support/bin/**/*'
-
+    - 'spec/support/helpers/file_system.rb' # args forwarding is not implemented in rubocop yet
 
 Style/ClassAndModuleChildren:
   EnforcedStyle: compact
