--- a/spec/support/docker/Dockerfile.alpine
+++ b/spec/support/docker/Dockerfile.alpine
@@ -1,3 +1,18 @@
+# Build pt stage
+##########################################
+FROM golang:1.12.14-alpine3.10 AS build-pt
+
+RUN set -eux; \
+    apk add --no-cache git; \
+    go get -u github.com/monochromegane/the_platinum_searcher/... ;\
+    echo $GOPATH; \
+    ls -lah $GOPATH/bin; \
+    $GOPATH/bin/pt --version; \
+    $GOPATH/bin/pt --help; \
+    apk del git
+
+# Build rspec stage
+##########################################
 FROM ruby:2.7-alpine3.10
 
 ARG APP_DIR=/app
@@ -10,6 +25,9 @@ ENV PLUGINS_DIR=$PLUGINS_DIR
 ENV BIN_DIR=$BIN_DIR
 ENV SKIP_COMPATIBILITY_REGEXPS=''
 ENV DANGEROUSLY_MAXIMIZE_PERFORMANCE=''
+# BINARIES
+ENV PT_PATH=$BIN_DIR/pt
+ENV RG_PATH=''
 # Allow RSpec to detect ci builds
 ENV TRAVIS_BUILD_ID=''
 # xvfb (even console vim +clientserver depends on X11)
@@ -19,6 +37,7 @@ ENV LANG C.UTF-8
 
 WORKDIR $DEPS_DIR
 
+COPY --from=build-pt /go/bin/pt $BIN_DIR/pt
 COPY Gemfile* spec/support/bin/install_linux_dependencies.sh  spec/support/bin/install_vim_dependencies.sh spec/support/docker/docker-entrypoint.sh ./
 
 RUN set -eux; \
@@ -38,7 +57,8 @@ RUN set -eux; \
     rm /etc/gemrc; \
 # OS dependencies
     sh install_vim_dependencies.sh $PLUGINS_DIR; \
-    sh install_linux_dependencies.sh $BIN_DIR; \
+    INSTALL='vim-global,neovim-local,ack-global,ag-global,rg-local,skip-pt-local' \
+      sh install_linux_dependencies.sh $BIN_DIR; \
 # Fix neovim appimage which is not working so far
     apk add --no-cache neovim; \
     mkdir -p /app/bin/squashfs-root/usr/bin; ln -s /usr/bin/nvim /app/bin/squashfs-root/usr/bin/nvim; \
