--- a/spec/support/docker/Dockerfile.alpine
+++ b/spec/support/docker/Dockerfile.alpine
@@ -45,7 +45,7 @@ COPY Gemfile* spec/support/setup/* spec/support/docker/docker-entrypoint.sh ./
 
 RUN set -eux; \
 # Runtime dependencies
-    apk add --update --no-cache xvfb python3 git; \
+    apk add --update --no-cache xvfb python3 git scrot; \
 # Build dependencies
     apk add --no-cache --virtual .builddeps \
     gcc python3-dev musl-dev \
