--- a/.travis.yml
+++ b/.travis.yml
@@ -128,7 +128,8 @@ jobs:
       env: LINT_FOR=ruby SKIP_INSTALL_VIM_DEPENDENCIES=1
       script:
         - bundle exec rubocop --display-cop-names
-        - shellcheck spec/support/**/*.sh spec/support/docker/run* spec/support/docker/rspec* spec/support/docker/docker-entrypoint.sh
+          # -x: Allow 'source' outside of FILES
+        - shellcheck -x spec/support/**/*.sh spec/support/docker/run* spec/support/docker/rspec* spec/support/docker/docker-entrypoint.sh
       os: linux
     - name: 'Viml lint (Vint, VimLint)'
       env:
