--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,7 +41,7 @@ Metrics/MethodLength:
 
 AllCops:
   Exclude:
-    - 'spec/support/brew_formula/**/*'
+    - 'spec/support/**/brew_formulae/**/*'
     - 'spec/support/bin/**/*'
     - 'spec/support/helpers/file_system.rb' # args forwarding is not implemented in rubocop yet
 
