--- a/.travis.yml
+++ b/.travis.yml
@@ -133,7 +133,7 @@ jobs:
       script:
         - bundle exec rubocop --display-cop-names
           # -x: Allow 'source' outside of FILES
-        - shellcheck -x spec/support/**/*.sh spec/support/docker/run* spec/support/docker/rspec* spec/support/docker/docker-entrypoint.sh
+        - shellcheck -e SC2039 -x spec/support/**/*.sh spec/support/docker/run* spec/support/docker/rspec* spec/support/docker/docker-entrypoint.sh
       os: linux
     - name: 'Viml lint (Vint, VimLint)'
       env:
