--- a/.travis.yml
+++ b/.travis.yml
@@ -60,19 +60,12 @@ install:
     [ "$LINT_FOR" = viml ] && pip3 install vim-vint==0.3.21 && return
     [ "$LINT_FOR" = ruby ] && bundle install && return
 
-
-    if [ "$SKIP_INSTALL_VIM_DEPENDENCIES" != '1' ]; then
-      sh spec/support/setup/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
-    fi
-
     bundle install
 
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
-      # ALLOW_SUDO=1 sh spec/support/setup/install_osx_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/bin"
-      sh spec/support/provision/osx.sh "$TRAVIS_BUILD_DIR/spec/support/bin" "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
+      sh spec/support/provision/osx.sh "spec/support/bin" "spec/support/vim_plugins"
     else
-      # ALLOW_SUDO=1 sh spec/support/setup/install_linux_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/bin"
-      sh spec/support/provision/debian.sh "$TRAVIS_BUILD_DIR/spec/support/bin" "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
+      sh spec/support/provision/debian.sh "spec/support/bin" "spec/support/vim_plugins"
     fi
 
 before_script:
