--- a/spec/support/docker/Dockerfile.alpine
+++ b/spec/support/docker/Dockerfile.alpine
@@ -53,8 +53,9 @@ RUN set -eux; \
 # Clearly an antipattern, but we have to be able to reuse this scripts for
 # various builds including different base images, different platforms and
 # travis-ci, so it's an acceptable trade-off
-    sh install_vim_dependencies.sh $PLUGINS_DIR; \
-    sh alpine.sh $BIN_DIR; \
+:
+RUN \
+    sh alpine.sh $BIN_DIR $PLUGINS_DIR; \
 # Temprorary fix for neovim .appimage which is not working under alpine distro so far
     apk add --no-cache neovim; \
     mkdir -p $BIN_DIR/squashfs-root/usr/bin; ln -s /usr/bin/nvim $BIN_DIR/squashfs-root/usr/bin/nvim; \
@@ -69,5 +70,5 @@ RUN set -eux; \
     yes | pip3 uninstall pip;
 
 WORKDIR $APP_DIR
-ENTRYPOINT ["/app/spec/support/docker/docker-entrypoint.sh"]
+ENTRYPOINT ["$DEPS_DIR/docker-entrypoint.sh"]
 CMD ["sh"]
