--- a/spec/support/docker/Dockerfile.alpine
+++ b/spec/support/docker/Dockerfile.alpine
@@ -34,7 +34,7 @@ ENV XDG_DATA_HOME=$DEPS_DIR/XDG_DATA_HOME
 WORKDIR $DEPS_DIR
 
 COPY --from=build-pt /go/bin/pt $BIN_DIR/pt
-COPY Gemfile* spec/support/provision/* spec/support/docker/docker-entrypoint.sh $DEPS_DIR/
+COPY Gemfile* spec/support/provision spec/support/docker/docker-entrypoint.sh $DEPS_DIR/
 
 RUN set -eux; \
 # Runtime dependencies
@@ -53,8 +53,6 @@ RUN set -eux; \
 # Clearly an antipattern, but we have to be able to reuse this scripts for
 # various builds including different base images, different platforms and
 # travis-ci, so it's an acceptable trade-off
-# :
-# RUN \
     sh alpine.sh $BIN_DIR $PLUGINS_DIR; \
 # Temprorary fix for neovim .appimage which is not working under alpine distro so far
     apk add --no-cache neovim; \
