--- a/.travis.yml
+++ b/.travis.yml
@@ -128,6 +128,8 @@ jobs:
           # -x: Allow 'source' outside of FILES
         - shellcheck -e SC2039 -x
             spec/support/**/*.sh
+            spec/support/**/*.bash
+            spec/support/**/*.bats
             spec/support/**/build*
             spec/support/**/run*
             spec/support/docker/rspec*
