--- a/.travis.yml
+++ b/.travis.yml
@@ -130,15 +130,7 @@ jobs:
       env: LINT_FOR=ruby SKIP_INSTALL_VIM_DEPENDENCIES=1
       script:
         - bundle exec rubocop --display-cop-names
-          # -x: Allow 'source' outside of FILES
-        - shellcheck -e SC2039 -x
-            spec/support/**/*.sh
-            spec/support/**/*.bash
-            spec/support/**/*.bats
-            spec/support/**/build*
-            spec/support/**/run*
-            spec/support/docker/rspec*
-            spec/support/provision/test/bats
+        - bash spec/support/scripts/shellcheck.bash
       os: linux
     - name: 'Viml lint (Vint, VimLint)'
       env:
